# Translat-O-Matic

./: CMakeLists.txt  LICENSE.txt  README.md
include/: LanguageResource.hpp  multi_language_library.h
src/: LanguageResource.cpp  README.txt  main.cpp  multi_language_library.cpp  multi_language_library.h
test/: main.cpp
